# hackclub-onboard-verification

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: app.html
src/routes/: +page.svelte  app.css
src/routes/auth/callback/github/: +page.svelte
src/routes/auth/callback/slack/: +page.svelte
wasm-lib/: Cargo.toml  LICENSE_MIT
wasm-lib/src/: lib.rs
