[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["LimesKey <limeskeys@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
serde_json = "1.0.128"
url = "2.5.2"
web-sys = { version = "0.3.72", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
